--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "crud-nestjs-multidb-hexagonal",
+  "name": "nestjs-hexagonal-architecture-crud",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=22.20",
+    "pnpm": ">=9.14"
+  },
+  "packageManager": "pnpm@9.14.2",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
