--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 PORT=8000
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:4200
+
+# DATABASE OPTIONS
 DB_TYPE= #mysql, postgresql or sqlserver
 DB_HOST=
 DB_NAME=db_crud_nestjs
