--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#00b3e699",
     "titleBar.inactiveForeground": "#15202b99"
-  }
+  },
+  "prisma.pinToPrisma6": true
 }
